--- a/phishing.html
+++ b/phishing.html
@@ -10,12 +10,21 @@
     content="cybersecurity, phishing, email security, scams, online safety">
   <title>5 Tips to Identify a Phishing Email</title>
 
+  <!-- Open Graph Meta Tags for Social Sharing -->
+  <meta property="og:title" content="5 Tips to Identify a Phishing Email" />
+  <meta property="og:description" content="Five practical tips to help you identify phishing emails and avoid online scams." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://johnfulton.org/phishing.html" />
+  <meta name="twitter:card" content="summary" />
+
   <link rel="stylesheet" href="css/coffeegrinder.css">
   <link rel="stylesheet" href="css/wireframe-theme.css">
   <script>document.createElement("picture");</script>
   <script src="js/picturefill.min.js" class="picturefill" async="async"></script>
   <link rel="stylesheet" href="css/main.css">
   <link rel="icon" type="image/x-icon" href="jf.png">
+  <!-- Dark Mode Theme Switcher -->
+  <script src="js/theme.js"></script>
 </head>
 
   <body data-active-page="cyber">
