--- a/phishing.html
+++ b/phishing.html
@@ -8,7 +8,35 @@
     content="Five practical tips to help you identify phishing emails and avoid online scams.">
   <meta name="keywords"
     content="cybersecurity, phishing, email security, scams, online safety">
-  <title>5 Tips to Identify a Phishing Email</title>
+  <title>How to Identify Phishing Emails | 5 Tips to Protect Yourself</title>
+
+  <!-- Schema.org Breadcrumb -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://johnfulton.org/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Fraud Prevention & Cybersecurity",
+        "item": "https://johnfulton.org/cyber.html"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Phishing Email Tips",
+        "item": "https://johnfulton.org/phishing.html"
+      }
+    ]
+  }
+  </script>
 
   <!-- Open Graph Meta Tags for Social Sharing -->
   <meta property="og:title" content="5 Tips to Identify a Phishing Email" />
@@ -19,6 +47,9 @@
 
   <link rel="stylesheet" href="css/coffeegrinder.css">
   <link rel="stylesheet" href="css/wireframe-theme.css">
+  <!-- Meta Tags -->
+  <meta name="author" content="John Fulton" />
+  <link rel="canonical" href="https://johnfulton.org/phishing.html" />
   <script>document.createElement("picture");</script>
   <script src="js/picturefill.min.js" class="picturefill" async="async"></script>
   <link rel="stylesheet" href="css/main.css">
