--- a/phishing.html
+++ b/phishing.html
@@ -45,6 +45,7 @@
   <meta property="og:url" content="https://johnfulton.org/phishing.html" />
   <meta name="twitter:card" content="summary" />
 
+
   <link rel="stylesheet" href="css/coffeegrinder.css">
   <link rel="stylesheet" href="css/wireframe-theme.css">
   <!-- Meta Tags -->
@@ -54,8 +55,6 @@
   <script src="js/picturefill.min.js" class="picturefill" async="async"></script>
   <link rel="stylesheet" href="css/main.css">
   <link rel="icon" type="image/x-icon" href="jf.png">
-  <!-- Dark Mode Theme Switcher -->
-  <script defer src="js/theme.js"></script>
 </head>
 
   <body data-active-page="cyber">
@@ -140,7 +139,7 @@
     <div class="coffee-span-12"></div>
   </div>
 
-    <script src="js/layout.js"></script>
+    <script defer src="js/layout.js"></script>
 
 </body>
 
