--- a/phishing.html
+++ b/phishing.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
-    content="Five practical tips to help you identify phishing emails and avoid online scams.">
+    content="Learn five practical tips from cybersecurity expert John Fulton to identify phishing emails and protect yourself from online scams and fraud.">
   <meta name="keywords"
-    content="cybersecurity, phishing, email security, scams, online safety">
+    content="phishing detection, cybersecurity, email security, scams, online safety, fraud prevention, John Fulton">
   <title>How to Identify Phishing Emails | 5 Tips to Protect Yourself</title>
 
   <!-- Schema.org Breadcrumb -->
@@ -39,10 +39,14 @@
   </script>
 
   <!-- Open Graph Meta Tags for Social Sharing -->
-  <meta property="og:title" content="5 Tips to Identify a Phishing Email" />
-  <meta property="og:description" content="Five practical tips to help you identify phishing emails and avoid online scams." />
+  <meta property="og:title" content="How to Identify Phishing Emails | 5 Tips by John Fulton" />
+  <meta property="og:description" content="Learn five practical tips to identify phishing emails and protect yourself from online scams and fraud." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://johnfulton.org/phishing.html" />
+  <meta property="og:image" content="https://johnfulton.org/John.jpg" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="How to Identify Phishing Emails" />
+  <meta name="twitter:description" content="5 practical tips to protect yourself from phishing scams and online fraud." />
   <meta name="twitter:card" content="summary" />
 
 
